# fiamma

./: .gitignore  Dockerfile  Makefile  README.md  changelog.config.js  config.yml  go.mod  go.sum  multi_node_setup.sh  nubit_config.json  readme.md
.fiamma/config/: addrbook.json  app.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json  validator.json
.fiamma/data/: priv_validator_state.json
.fiamma/keyring-test/: test-account.info
.github/workflows/: go-lint.yml  proto-registry.yml  publish-docker-image.yml  release.yml
app/: app.go  app_config.go  babylon.go  ibc.go  sim_bench_test.go  sim_test.go  wasm.go
cmd/fiammad/: main.go
contrib/images/: Makefile
docs/static/: openapi.yml
nubitda/: nubit_config.go  nubit_test.go  nubitda.go  nubitda_mock.go
proto/: buf.yaml
prover_examples/bitvm/: proof.bitvm  public_input.bitvm  vk.bitvm
prover_examples/bitvm_challenge/: proof.bitvm  vk.bitvm
prover_examples/gnark_groth16/: Makefile  gnark_groth16.go
prover_examples/gnark_plonk/: Makefile  README.md  gnark_plonk.go
prover_examples/sp1/: riscv32im-succinct-zkvm-elf  sp1_fibonacci.proof
scripts/: depoly_server_env.sh  env_setup.sh  multi_node_setup.sh  protoc-swagger-gen.sh  protocgen.sh  run_localnet.sh  send_task.sh  server_bin_upgrade.sh  server_node_setup.sh  server_node_upgrade.sh  setup_node.sh  setup_validator.sh  submit_sp1.sh  verify_sp1.sh
scripts/cli/: query_bitvm_challenge_data.sh  query_bitvm_witness.sh  query_dasubmission_data.sh  (+24 more)
verifiers/sp1/lib/: .gitignore  Cargo.toml  sp1.h
verifiers/sp1/lib/src/: lib.rs
(+293 files in other folders)
