[package]
name = "sp1-verifier-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
